# bpftop

./: .gitignore  Cargo.toml  rustfmt.toml
bpf-metrics/: Cargo.toml  README.md
bpf-metrics/examples/: README.md  print.rs
bpf-metrics/examples/prometheus/: main.rs  prometheus.yml
bpf-metrics/examples/prometheus/consoles/: prog-metrics.html
bpf-metrics/src/: bpf_metrics.rs  bpf_stats.rs  lib.rs  link_info.rs  map_info.rs  metric_collection.rs  prog_info.rs
bpftop/: Cargo.toml
bpftop/src/: app.rs  bpf_program.rs  helpers.rs  main.rs  metrics.rs
bpftop/src/bpf/: pid_iter.skel.rs
ebpf-metrics/: Cargo.toml
ebpf-metrics/src/: lib.rs
