[package]
name = "bpftop"
version = "0.5.1"
description = "Dynamic real-time view of running eBPF programs"
authors.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
libbpf-cargo = "0.23.2"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-journald = "0.3.0"
libbpf-rs = "0.23.2"
libbpf-sys = "1.4.2"
crossterm = "0.27.0"
anyhow = { workspace = true }
ratatui = { version = "0.26.3", default-features = false, features = ['crossterm'] }
nix = { version = "0.29.0", features = ["user"] }
circular-buffer = "0.1.7"
procfs = "0.16.0"
tui-input = "0.8.0"
bpf-metrics = { path = "../bpf-metrics", default-features = false, features = ["bpf-stats"] }
