[package]
name = "ebpf-metrics"
version = "0.1.0"
description = "eBPF metrics emitter based on OpenMetrics standards"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { git = "https://github.com/tyrone-wu/aya.git", branch = "dev" }
aya-obj = { git = "https://github.com/tyrone-wu/aya.git", branch = "dev" }
prometheus-client = "0.22.2"
